@@ -46,9 +46,6 @@
 #endif
 
 #include <itpp/signal/transforms.h>
-#include <itpp/base/matfunc.h>
-#include <itpp/base/math/elem_math.h>
-#include <itpp/base/converters.h>
 
 
 namespace itpp { 
@@ -609,174 +606,9 @@ namespace itpp {
   }
 
 
-  template <class T>
-  Vec<T> dht(const Vec<T> &v)
-  {
-    Vec<T> ret(v.size());
-    dht(v, ret);
-    return ret;
-  }
-
-  //! Bit reverse
-  template <class T>
-  void bitrv(Vec<T> &out) {
-    int i,j,N1,K,N=out.size();
-    T TEMP;
-
-    j=0;
-    N1=N-1;
-    for (i=0;i<N1;i++) {
-      if (i<j) {
-	TEMP=out[j];
-	out[j]=out[i];
-	out[i]=TEMP;
-      }
-      K=N/2;
-      while (K<=j) {
-	j=j-K;
-	K=K/2;
-      }
-      j=j+K;
-    }
-  }
-
-  template <class T>
-  void dht(const Vec<T> &vin, Vec<T> &vout)
-  {
-    T t;
-    int m,N,l,k,j,ib,i;
-
-    N = vin.size();
-    vout.set_size(N);
-
-    m = levels2bits(N);
-    it_assert_debug((1<<m)==N, "dht: The vector size must be a power of two!");
-
-    // This step is separated because it copies vin to vout
-    for (ib=0; ib<N; ib+=2) {
-      vout(ib) = vin(ib) + vin(ib+1);
-      vout(ib+1) = vin(ib) - vin(ib+1);
-    }
-    N /= 2;
-
-    l = 2;    
-    for (i=1; i<m; i++) {
-      N /= 2;
-      ib = 0;
-      for (k=0; k<N; k++) {
-	for (j=0; j<l; j++) {
-	  t = vout(ib+j);
-	  vout(ib+j) += vout(ib+j+l);
-	  vout(ib+j+l) = t - vout(ib+j+l);
-	}
-	ib += 2*l;
-      }
-      l *= 2;
-    }
-
-    vout /= T(std::sqrt(double(vin.size())));
-  }
-
-  template <class T>
-  void self_dht(Vec<T> &v)
-  {
-    T t;
-    int m,N,l=1,k,j,ib,i;
-
-    N = v.size();
-
-    m = levels2bits(N);
-    it_assert_debug((1<<m)==N, "dht: The vector size must be a power of two!");
-
-    for (i=0; i<m; i++) {
-      N /= 2;
-      ib = 0;
-      for (k=0; k<N; k++) {
-	for (j=0; j<l; j++) {
-	  t = v(ib+j);
-	  v(ib+j) += v(ib+j+l);
-	  v(ib+j+l) = t - v(ib+j+l);
-	}
-	ib += 2*l;
-      }
-      l *= 2;
-    }
-
-    v /= T(std::sqrt(double(v.size())));
-  }
-
-  template <class T>
-  Vec<T> dwht(const Vec<T> &v)
-  {
-    Vec<T> ret(v.size());
-
-    dwht(v, ret);
-
-    return ret;
-  }
-
-  template <class T>
-  void dwht(const Vec<T> &vin, Vec<T> &vout)
-  {
-    dht(vin, vout);
-    bitrv(vout);
-  }
-
-
-  template <class T>
-  void self_dwht(Vec<T> &v)
-  {
-    self_dht(v);
-    bitrv(v);
-  }
-
-  template <class T>
-  Mat<T> dht2(const Mat<T> &m)
-  {
-    Mat<T> ret(m.rows(), m.cols());
-    Vec<T> v;
-    int i;
-
-    for (i=0; i<m.rows(); i++) {
-      v = m.get_row(i);
-      self_dht(v);
-      ret.set_row(i, v);
-    }
-    for (i=0; i<m.cols(); i++) {
-      v = ret.get_col(i);
-      self_dht(v);
-      ret.set_col(i, v);
-    }
-
-    return transpose(ret);
-  }
-
-  template <class T>
-  Mat<T> dwht2(const Mat<T> &m)
-  {
-    Mat<T> ret(m.rows(), m.cols());
-    Vec<T> v;
-    int i;
-
-    for (i=0; i<m.rows(); i++) {
-      v = m.get_row(i);
-      self_dwht(v);
-      ret.set_row(i, v);
-    }
-    for (i=0; i<m.cols(); i++) {
-      v = ret.get_col(i);
-      self_dwht(v);
-      ret.set_col(i, v);
-    }
-
-    return transpose(ret);
-  }
-
-  /////////////////////////////
-  //
-  //  template instantiation
-  //
-  /////////////////////////////
+  // ----------------------------------------------------------------------
+  // template instantiation
+  // ----------------------------------------------------------------------
 
   template vec dht(const vec &v);
   template cvec dht(const cvec &v);
