@@ -1,3 +1,10 @@
+2007-05-15  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/signal/transforms.cpp, itpp/signal/transforms.h: Fixed
+	linking errors when trying to use Hadamard and Walsh-Hadamard
+	transform functions. This fixes bug report [1719146] submitted by
+	Stephan Ludwig.
+
 2007-05-03  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* AUTHORS, doc/local/authors.doc: Sean Finney added to the list of
